--- a/mern-exercise-tracker/backend/.env
+++ b/mern-exercise-tracker/backend/.env
@@ -1,3 +1,3 @@
-ATLAS_URI=mongodb+srv://cse470_project:Newaj243@cse470projects.pzcnduk.mongodb.net/?appName=CSE470Projects
+MONGO_URI=mongodb+srv://cse470_project:Newaj243@cse470projects.pzcnduk.mongodb.net/?appName=CSE470Projects
 JWT_SECRET=mysupersecretkey123
 PORT=5000
