--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,41 @@
+# Dependencies
 node_modules/
-/backend/node_modules/
-/client/node_modules/
-/frontend/node_modules/
+*/node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE
 .vscode/
 .idea/
-uploads/
-logs/
-npm-debug.log
-package-lock.json
-yarn.lock
+*.swp
+*.swo
+*~
+
+# Build outputs
 dist/
-coverage/
+build/
+*.log
+
+# Uploads (keep directory structure but ignore files)
+backend/uploads/*
+!backend/uploads/.gitkeep
+
+# Vite
+frontend/.vite/
+frontend/dist/
+
+# Package locks (optional - some prefer to commit these)
+# package-lock.json
+
