--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "patient-frontend",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,7 +12,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^5.1.0"
   }
 }
